Reemplazo de texto lorem en la pagina index, en una nueva rama.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <section>
         <div class="titulosectionindex" data-aos="zoom-in-up"> 
             <h2 data-aos="fade-right">Bienvenidos a GOD PASTELS!</h2>
-            <p data-aos="fade-left" class="anchoresponsive">Somos un Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas excepturi, eligendi a expedita possimus ad. Eveniet corporis excepturi asperiores reiciendis tempore unde voluptatibus. Dolores iusto explicabo beatae, optio laborum vero!
-            Nihil soluta unde neque atque! Error nihil distinctio fugiat asperiores. Quisquam esse aliquam atque voluptate, culpa animi tenetur nulla, tempore nobis velit et rerum? Optio et voluptas at blanditiis inventore.</p>
+            <p data-aos="fade-left" class="anchoresponsive">Abrimos nuestra primera tienda boutique en el año 2010 en San Telmo, inspirada en la estética y la gastronomía de New York en los años 60, con el Cheesecake y el Bagel como productor icónicos. Año a año creció con firmeza, manteniendo su estética y concepto original, posicionándose como una empresa gourmet de alto nivel.
+</p>
         </div>
             <div class="mainindex1">
                 <img src="assets/index/imagen-cuadrada-primera.png" class="imgmainindexuno unoimg" alt="" data-aos="fade-right">
@@ -73,8 +73,7 @@
             </div>
 
             <div class="titulosectionindex" data-aos="zoom-in-up"> 
-                <p data-aos="fade-right" class="anchoresponsive">Somos un Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas excepturi, eligendi a expedita possimus ad. Eveniet corporis excepturi asperiores reiciendis tempore unde voluptatibus. Dolores iusto explicabo beatae, optio laborum vero!
-                Nihil soluta unde neque atque! Error nihil distinctio fugiat asperiores. Quisquam esse aliquam atque voluptate, culpa animi tenetur nulla, tempore nobis velit et rerum? Optio et voluptas at blanditiis inventore.</p>
+                <p data-aos="fade-right" class="anchoresponsive">GOD PASTELS ofrece una amplia variedad de productos y servicios enfocados en la experiencia del consumidor, entre ellos: 30 variedades de tortas, desayunos a domicilio, mesas dulces para eventos, catering salado, delivery y take away boxes, así como soluciones para eventos sociales y corporativos.</p>
             </div>
 
             <div class="mainindex2" data-aos="zoom-out-up">
@@ -83,12 +82,10 @@
 
         <div class="mainindex3">
             <div class="textomainindex3" class="anchoresponsive">
-                <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad at illo optio architecto unde, qui incidunt, reiciendis quidem corrupti excepturi, ducimus eum quasi repellendus ea. Incidunt facilis recusandae qui eaque!</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad at illo optio architecto unde, qui incidunt, reiciendis quidem corrupti excepturi, ducimus eum quasi repellendus ea. Incidunt facilis recusandae qui eaque!
-                    Officia a doloribus velit corrupti perferendis quas, ex commodi repellendus ut eaque facilis corporis dicta suscipit maiores est voluptatum modi eum praesentium voluptate deleniti nesciunt, autem inventore fugiat? Expedita, obcaecati.
-                    Commodi, dolorum impedit ratione repellendus reprehenderit, hic dolor deleniti nemo odit nostrum officia quibusdam iure ea ullam maiores tenetur molestias porro, est perferendis esse voluptate. Eos ex necessitatibus ab repellendus.
-                    Eius ut quaerat officia dolore deleniti magni aliquam doloribus praesentium voluptatem voluptates, ab totam quo mollitia minima quam delectus nisi. Dolor tempore provident cupiditate delectus pariatur, harum est at eaque?
+                <h2>Elaboramos todos nuestros productos frescos de manera artesanal, sin conservantes ni aditivos y priorizando la alta calidad de materias primas</h2>
+                <p>La calidad de nuestros productos vuelca su diseño en jugar con los sabores caseros y la alta calidad, generando recetas propias, permitiendonos un prestigioso resultado de deliciosas tortas, pasteles, galletas y Küchenes.
+                Contamos con un equipo consolidado liderado por nuestra maestra pastelera, con años de experiencia en el mundo de la pastelería y sus ayudantes con el mismo recorrido laboral.
+                Nuestra misión es ofrecer el mejor servicio a nuestros clientes, entregando calidez, sabor y calidad en nuestros exquisitos productos.
                 </p>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.477227320371!2d-58.38399818476995!3d-34.617378580455906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaba6ac89b35%3A0x1a2dc24cbca665a7!2sUADE!5e0!3m2!1ses!2sar!4v1649629087415!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
