Reemplazo de texto lorem en pagina nosotros.

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -67,24 +67,25 @@
         </div>
 
         <ul class="preguntasUl" data-aos="fade-up">
-            <h2 class="h2Preguntas">¿Quienes somos?</h2>
+            <h2 class="h2Preguntas">La pastelería extemporánea</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facilis deserunt quo maiores culpa nulla accusantium, quis nostrum vel perspiciatis. Modi cum architecto distinctio harum cumque perferendis deleniti quibusdam voluptas!
-                Cumque quasi sunt impedit, tempore architecto deleniti dolorum quisquam nulla nobis praesentium quis natus officia corporis aperiam dolorem tenetur laudantium perspiciatis sit repudiandae similique eligendi sequi corrupti veniam? Error, facere.
-                Facere ut quod, aliquam velit possimus nostrum, est odio mollitia numquam odit saepe dolorem. Eligendi doloremque est pariatur sint perspiciatis ex dolor quidem reprehenderit dolores, vitae eius impedit accusantium nemo?
-                Ipsa exercitationem recusandae dolore id sed doloremque repellendus, rerum totam eligendi nam illo numquam officia quod tenetur voluptate fugiat error quibusdam minus omnis quis explicabo? Nostrum impedit corporis a alias.
-                Cumque aliquid quis quaerat laborum eveniet in velit voluptas sunt facilis! Ut sint nulla vitae similique eius aliquam, inventore assumenda ratione et nam expedita adipisci voluptas laboriosam perspiciatis esse repellat.
-                Natus fuga dolore soluta itaque numquam voluptate praesentium rem alias! Expedita consequuntur illo debitis eveniet id ipsum officia, ad at suscipit blanditiis libero ratione quis similique, ab eum. Fugiat, assumenda.
-                Aut laudantium vero reprehenderit labore quia tenetur eum et impedit aliquam soluta cumque quas quibusdam, repellendus perspiciatis eligendi obcaecati sapiente odit. Laboriosam labore inventore laudantium doloremque cupiditate. Aliquam, consequatur saepe.
-                Consequatur ab corporis delectus voluptatem id accusantium laborum alias inventore excepturi, deleniti, facere quia cupiditate minima omnis nihil eos. Fugit in dolor est suscipit perspiciatis dignissimos voluptate aut ipsam ducimus.
-                Tempora quam fugit ducimus nam eos consequatur officia velit, nostrum inventore, reiciendis, voluptatum aut quis culpa impedit illo iure dignissimos saepe earum eveniet aspernatur officiis cumque laboriosam harum et? Voluptatem?
-                Tempora ducimus id ad atque sint explicabo ipsum. Vero similique alias, ducimus expedita pariatur neque quidem quis adipisci eaque ab et accusamus ratione eum quia reiciendis! Mollitia temporibus aspernatur saepe?
-                Dolores doloremque, in autem tenetur architecto ratione, delectus sed consequatur accusantium qui ea eius sequi minus provident commodi reiciendis aliquam, laboriosam rerum ut quisquam dicta. Nulla soluta labore nostrum praesentium?
-                Corporis est at iusto, reiciendis veritatis animi provident totam, eveniet, pariatur voluptatibus quos natus. Dicta, iste magnam temporibus dolor iusto recusandae eaque ducimus necessitatibus, molestias hic eligendi aliquam qui rerum.
-                Voluptas eaque asperiores veniam vero, ex fugit aspernatur odio eos numquam eligendi ipsa repellendus est excepturi doloremque neque inventore assumenda id velit. Dicta laboriosam corrupti architecto iure autem odit aspernatur!
-                Dicta laboriosam corrupti architecto iure autem odit aspernatur!
-                Dicta laboriosam corrupti architecto iure autem odit aspernatur!
-                Dicta laboriosam corrupti architecto iure autem odit aspernatur!
+                Buenos Aires, encerrada entre la tradición de la torta y la pretensión del postre moderno, reclama alternativas que logren combinar la excitación de lo novedoso con el placer por lo levemente adictivo. Y en este contexto se inscribe Les Croquants, con su intención de recuperar la sonsa alegría de comer algo insuperable.
+                Influenciada por lo que en otras partes del mundo son ya íconos de la tradición pastelera (macarons, mooncakes, wagashis, canelés, y otros), su pastelería apela en primera instancia al puro placer estético, para luego dar paso a la devoción infantil por lo sencillamente rico.
+                Con amplitud de ingredientes, Les Croquants propone una pastelería versátil: la personalización de sabores y presentaciones es un desafío que se toma muy en serio. Especialmente en eventos, el tándem cocina-diseño y la adaptación al contexto son objetivos que nunca se pierden de vista.
+                Infantil, rico, delicado, intrigante. Les Croquants surge con la intención de contagiar las ganas de algo nuevo.macarons, mooncakes, wagashis, canelés.
+                Buenos Aires, encerrada entre la tradición de la torta y la pretensión del postre moderno, reclama alternativas que logren combinar la excitación de lo novedoso con el placer por lo levemente adictivo. Y en este contexto se inscribe Les Croquants, con su intención de recuperar la sonsa alegría de comer algo insuperable.
+                Influenciada por lo que en otras partes del mundo son ya íconos de la tradición pastelera (macarons, mooncakes, wagashis, canelés, y otros), su pastelería apela en primera instancia al puro placer estético, para luego dar paso a la devoción infantil por lo sencillamente rico.
+                Con amplitud de ingredientes, Les Croquants propone una pastelería versátil: la personalización de sabores y presentaciones es un desafío que se toma muy en serio. Especialmente en eventos, el tándem cocina-diseño y la adaptación al contexto son objetivos que nunca se pierden de vista.
+                Infantil, rico, delicado, intrigante. Les Croquants surge con la intención de contagiar las ganas de algo nuevo.macarons, mooncakes, wagashis, canelés.
+                Buenos Aires, encerrada entre la tradición de la torta y la pretensión del postre moderno, reclama alternativas que logren combinar la excitación de lo novedoso con el placer por lo levemente adictivo. Y en este contexto se inscribe Les Croquants, con su intención de recuperar la sonsa alegría de comer algo insuperable.
+                Influenciada por lo que en otras partes del mundo son ya íconos de la tradición pastelera (macarons, mooncakes, wagashis, canelés, y otros), su pastelería apela en primera instancia al puro placer estético, para luego dar paso a la devoción infantil por lo sencillamente rico.
+                Con amplitud de ingredientes, Les Croquants propone una pastelería versátil: la personalización de sabores y presentaciones es un desafío que se toma muy en serio. Especialmente en eventos, el tándem cocina-diseño y la adaptación al contexto son objetivos que nunca se pierden de vista.
+                Infantil, rico, delicado, intrigante. Les Croquants surge con la intención de contagiar las ganas de algo nuevo.macarons, mooncakes, wagashis, canelés
+                Buenos Aires, encerrada entre la tradición de la torta y la pretensión del postre moderno, reclama alternativas que logren combinar la excitación de lo novedoso con el placer por lo levemente adictivo. Y en este contexto se inscribe Les Croquants, con su intención de recuperar la sonsa alegría de comer algo insuperable.
+                Influenciada por lo que en otras partes del mundo son ya íconos de la tradición pastelera (macarons, mooncakes, wagashis, canelés, y otros), su pastelería apela en primera instancia al puro placer estético, para luego dar paso a la devoción infantil por lo sencillamente rico.
+                Con amplitud de ingredientes, Les Croquants propone una pastelería versátil: la personalización de sabores y presentaciones es un desafío que se toma muy en serio. Especialmente en eventos, el tándem cocina-diseño y la adaptación al contexto son objetivos que nunca se pierden de vista.
+                Infantil, rico, delicado, intrigante. Les Croquants surge con la intención de contagiar las ganas de algo nuevo.macarons, mooncakes, wagashis, canelés
+
 
             </p>
         </ul>
