Reemplazo de texto lorem en la pagina local

--- a/pages/local.html
+++ b/pages/local.html
@@ -67,8 +67,9 @@
         <ul class="preguntasUl" data-aos="fade-right">
             <h2 class="h2Preguntas">Querés visitar nuestro local? 🏡</h2>
             <p>
-                Nos ubicamos en lorem ipsum dolor sit amet consectetur adipisicing elit. Iste numquam ratione quae ipsam, inventore unde sint maiores voluptatibus, laborum vero doloribus qui voluptas porro animi iusto! Saepe quidem pariatur iure?
-                Ex, temporibus. Quod nulla necessitatibus ducimus. Beatae excepturi dignissimos debitis voluptates repudiandae doloremque modi explicabo, cumque pariatur. Quam molestiae tenetur corrupti voluptas! Nesciunt laboriosam repellat sit mollitia ab in ullam!
+                La Pastelería es un emprendimiento iniciado por Profesionales Gastronómicos egresados en Gato Dumas Colegio Gastronómico, inspirado en una Pastelería Artesanal contemporánea, que en un principio se especializó únicamente en tortas, pero hoy, cuenta con una gran variedad de Minicakes, Brownies, Alfajores, Cup Cakes, Cake Pops, Petit fours y más. Su objetivo es ofrecer un producto de alta calidad, excelente presentación, pero con el sabor de lo casero.
+                El 1 de Octubre del 2015 abrimos nuestro flamente local en la ciudad de San Telmo.
+                No dejes de visitarnos, esperamos siempre sorprenderte.
             </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.477227320371!2d-58.38399818476995!3d-34.617378580455906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaba6ac89b35%3A0x1a2dc24cbca665a7!2sUADE!5e0!3m2!1ses!2sar!4v1649629087415!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" data-aos="fade-up"></iframe>
         </ul>
