Cambio de precios en catering y descripcion de productos

--- a/pages/catering.html
+++ b/pages/catering.html
@@ -78,7 +78,7 @@
 
                 <div class="product-price-btn">
                     <div class="preciodiv">
-                        <b class="precio">Precio (solo por encargo): $2000</b>
+                        <b class="precio">Precio (solo por encargo): $6000</b>
                     </div>
 
                     <div class="centrar-boton">
@@ -98,12 +98,12 @@
                 <div class="right-producto">
                     <div class="product-text">
                         <h2 class="infoproducto">Torta de 'Oreo'</h2>
-                        <p class="infoproducto">La torta de chocolate rellena y cubierta de ganache de KITKAT®, con topping troceado sorprenderá a todos tus seres queridos porque esta receta fácil y el toque especial de taza polvo de cacao Nestlé® es un manjar para el paladar.
+                        <p class="infoproducto">La torta de chocolate rellena y cubierta de ganache de OREO, con topping troceado sorprenderá a todos tus seres queridos porque esta receta fácil y el toque especial de taza polvo de cacao Nestlé® es un manjar para el paladar.
                     </div>
 
                     <div class="product-price-btn">
                         <div class="preciodiv">
-                            <b class="precio">Precio (solo por encargo): $2000</b>
+                            <b class="precio">Precio (solo por encargo): $5000</b>
                         </div>
 
                         <div class="centrar-boton">
@@ -123,12 +123,12 @@
                 <div class="right-producto">
                     <div class="product-text">
                         <h2 class="infoproducto">Torta de 'Nerds'</h2>
-                        <p class="infoproducto">La torta de chocolate rellena y cubierta de ganache de KITKAT®, con topping troceado sorprenderá a todos tus seres queridos porque esta receta fácil y el toque especial de taza polvo de cacao Nestlé® es un manjar para el paladar.
+                        <p class="infoproducto">La torta de chocolate rellena y cubierta de ganache de NERDS, con topping troceado sorprenderá a todos tus seres queridos porque esta receta fácil y el toque especial de taza polvo de cacao Nestlé® es un manjar para el paladar.
                     </div>
 
                     <div class="product-price-btn">
                         <div class="preciodiv">
-                            <b class="precio">Precio (solo por encargo): $2000</b>
+                            <b class="precio">Precio (solo por encargo): $4500</b>
                         </div>
 
                         <div class="centrar-boton">
@@ -149,12 +149,12 @@
 
                         <div class="product-text">
                             <h2 class="infoproducto">Torta de maní  </h2>
-                            <p class="infoproducto">La torta de chocolate rellena y cubierta de ganache de KITKAT®, con topping troceado sorprenderá a todos tus seres queridos porque esta receta fácil y el toque especial de taza polvo de cacao Nestlé® es un manjar para el paladar.
+                            <p class="infoproducto">La torta de chocolate rellena y cubierta de ganache de MANI, con topping troceado sorprenderá a todos tus seres queridos porque esta receta fácil y el toque especial de taza polvo de cacao Nestlé® es un manjar para el paladar.
                         </div>
 
                         <div class="product-price-btn">
                             <div class="preciodiv">
-                                <b class="precio">Precio (solo por encargo): $2000</b>
+                                <b class="precio">Precio (solo por encargo): $300</b>
                             </div>
 
                             <div class="centrar-boton">
